<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_action_undo"
        android:orderInCategory="100"
        android:title="@string/action_undo"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_content_new"
        android:orderInCategory="300"
        android:title="@string/math_new_element"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_discard"
        android:icon="@drawable/ic_action_content_discard"
        android:orderInCategory="400"
        android:title="@string/action_discard"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_new_document"
        android:orderInCategory="510"
        android:title="@string/action_new_document"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open"
        android:icon="@drawable/ic_action_content_open"
        android:orderInCategory="600"
        android:title="@string/action_open"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_content_save"
        android:orderInCategory="700"

        android:title="@string/action_save"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save_as"
        android:orderInCategory="800"
        android:title="@string/action_save_as"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="810"
        android:title="@string/action_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove_ads"
        android:orderInCategory="900"
        android:title="@string/action_remove_ads"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_setting"
        android:orderInCategory="920"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
