<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/context_menu_expand"
        android:icon="@drawable/ic_action_content_expand"
        android:title="@string/context_expand"
        app:showAsAction="always" />
    <item
        android:id="@+id/context_menu_cut"
        android:icon="@drawable/ic_action_content_cut"
        android:title="@string/context_cut"
        app:showAsAction="always" />
    <item
        android:id="@+id/context_menu_copy"
        android:icon="@drawable/ic_action_content_copy"
        android:title="@string/context_copy"
        app:showAsAction="always" />
    <item
        android:id="@+id/context_menu_paste"
        android:icon="@drawable/ic_action_content_paste"
        android:title="@string/context_paste"
        app:showAsAction="always" />

</menu>
